@@ -1,6 +1,8 @@
 # <pep8 compliant>
 # Written by Stephan Vedder and Michael Schnabel
 
+import sys
+
 from mathutils import Vector
 from io_mesh_w3d.common.utils.helpers import *
 from io_mesh_w3d.common.structs.collision_box import *
@@ -16,10 +18,8 @@ def retrieve_boxes(container_name):
         box = CollisionBox(
             name_=name,
             center=mesh_object.location)
-        box.extend = Vector(
-            (abs(mesh_object.bound_box[0][0]) * 2,
-             abs(mesh_object.bound_box[0][1]) * 2,
-             abs(mesh_object.bound_box[4][2])))
+
+        box.extend = get_aa_box(mesh_object.data.vertices)
 
         box.box_type = int(mesh_object.data.box_type)
 
@@ -38,3 +38,26 @@ def retrieve_boxes(container_name):
             box.color = RGBA(material.diffuse_color)
         boxes.append(box)
     return boxes
+
+def get_aa_box(vertices):
+    minX = sys.float_info.max
+    maxX = sys.float_info.min
+
+    minY = sys.float_info.max
+    maxY = sys.float_info.min
+
+    minZ = sys.float_info.max
+    maxZ = sys.float_info.min
+
+    for vertex in vertices:
+        minX = min(vertex.co.x, minX)
+        maxX = max(vertex.co.x, maxX)
+
+        minY = min(vertex.co.y, minY)
+        maxY = max(vertex.co.y, maxY)
+
+        minZ = min(vertex.co.z, minZ)
+        maxZ = max(vertex.co.z, maxZ)
+
+    return Vector((maxX - minX, maxY - minY, maxZ - minZ))
+
