@@ -41,6 +41,9 @@ def retrieve_meshes(context, hierarchy, rig, container_name, force_vertex_materi
         if mesh_object.data.casts_shadow:
             header.attrs |= GEOMETRY_TYPE_CAST_SHADOW
 
+        if mesh_object.data.two_sided:
+            header.attrs |= GEOMETRY_TYPE_TWO_SIDED
+
         mesh_object = mesh_object.evaluated_get(depsgraph)
         mesh = mesh_object.data
         b_mesh = prepare_bmesh(context, mesh)
